添加log，微信用户
