# internal/model/user.go
@@ -3,8 +3,9 @@ package model
 // User ...
 type User struct {
 	Model
-	Username string `json:"username" gorm:"column:username"`
-	Password string `json:"password" gorm:"column:password"`
+	Username  string `json:"username" gorm:"column:username"`
+	Password  string `json:"password" gorm:"column:password"`
+	WxUnionID string `json:"wx_union_id" gorm:"column:wx_union_id"` // 微信unionid
 }
 
 //UserInfo 用户信息
